flux/apps/forgejo-code-invisible/forgejo-route.yaml
# Route from traefik to forgejo
# https://doc.traefik.io/traefik/v3.1/routing/providers/kubernetes-crd/#kind-ingressroutetcp
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-code-invisible-ssh
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - ssh-code-invisible # name from traefik port
  routes:
    - match: HostSNI(`*`)
      services:
        # Created by the Forgejo helm chart and named <releaseName>-ssh
        - name: forgejo-code-invisible-ssh
          port: ssh # forgejo ssh port on kubernetes service
